# Boboscript

./: .gitignore  sample.bs  sample2.bs  specification.tex
compiler/: CMakeLists.txt  cloc.sh  scanner.pro
compiler/app/: CMakeLists.txt  app.pro  main.cpp
compiler/parserlib/: CMakeLists.txt  compound_type.h  fileast.cpp  fileast.h  parser.cpp  parser.h  type.h
compiler/parserlib_tests/: CMakeLists.txt  compound_type_test.cpp  compound_type_test.h  main.cpp  parsertest.cpp  parsertest.h  resources.qrc  sample_1_tokens.json
compiler/scannerlib/: CMakeLists.txt  command_line.h  scanner.cpp  token.cpp  token.h
compiler/scannerlib_tests/: CMakeLists.txt  tests.pro
compiler/tests/: main.cpp
scanner/: command_line.cpp  main.cpp  scanner.cpp  scanner.h  scanner.pro  token.cpp  token.h  token_stringifier_generator.hs
scanner/scannerlib/: command_line.cpp  scanner.cpp  scanner.h  scannerlib.pro  token.cpp  token.h
scanner/tests/: dummytest.cpp  lexertest.cpp  lexertest.h  tests.pro
